--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,12 @@
     <title>{{ title }}</title>
 
     <!-- Link -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="192x192" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="512x512" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/56185972" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://avatars.githubusercontent.com/u/38323665" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://avatars.githubusercontent.com/u/38323665" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/38323665" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://avatars.githubusercontent.com/u/38323665" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://avatars.githubusercontent.com/u/38323665" />
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/38323665" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
@@ -28,7 +28,7 @@
             <div class="container">
                 <!-- Logo -->
                 <h1 id="logo">
-                    <a href="/"><img src="https://avatars.githubusercontent.com/u/56185972" alt="Logo" /></a>
+                    <a href="/"><img src="https://avatars.githubusercontent.com/u/38323665" alt="Logo" /></a>
                 </h1>
 
                 <!-- Navbar links -->
@@ -37,7 +37,7 @@
                     <li><a class="nav-link" href="{{ url_for('contact_page') }}">CONTACT</a></li>
                     <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
                     <li>
-                        <a class="btn btn-primary" href="https://github.com/dmdhrumilmistry">RESUME <i
+                        <a class="btn btn-primary" href="https://github.com/gnany07">GITHUB RESUME<i
                                 class="fas fa-arrow-right"></i></a>
                     </li>
 
@@ -70,23 +70,21 @@
 
     <footer id="footer">
         <div class="container">
-            <a href="mailto:contact@dmdhrumilmistry.me">contact@dmdhrumilmistry.me</a>
+            <a href="mailto:contact@gnanendarreddymale77@gmail.com">contact@gnanendarreddymale77@gmail.com</a>
             <!-- Social links -->
             <div class="social">
-                <a href="https://twitter.com/dmdhrumilmistry"><img
+                <a href="https://twitter.com/gnanickky"><img
                         src="{{ url_for('static', filename='assets/twitter-icon.svg') }}" alt="Twitter"
                         style="border-radius: 0px;"></a>
-                <a href="https://linkedin.com/in/dmdhrumilmistry"><img
+                <a href="https://linkedin.com/in/gnanendar-reddy-1862b6117"><img
                         src="{{ url_for('static', filename='assets/linkedin-icon.svg') }}" alt="Linkedin"
                         style="border-radius: 0px;"></a>
-                <a href="https://t.me/anyonymous_dude"><img
-                        src="{{ url_for('static', filename='assets/telegram.svg') }}" alt="Telegram"></a>
-                <a href="https://github.com/dmdhrumilmistry"><img
+                <a href="https://github.com/gnany07"><img
                         src="{{ url_for('static', filename='assets/github-icon.svg') }}" alt="GitHub"
                         style="border-radius: 0px;"></a>
             </div>
             <!-- Attribution -->
-            <p>Copyright &copy; dmdhrumilmistry 2022, All rights reserved</p>
+            <p>Copyright &copy; Gnanendar reddy 2022, All rights reserved</p>
         </div>
     </footer>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
