--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 {% block headersection %}
 
 <section class="header-container">
-  <img class="profile-image" src="https://avatars.githubusercontent.com/u/56185972" alt="" />
-  <h1>Hey Visitor! I'm Dhrumil Mistry</h1>
+  <img class="profile-image" src="https://avatars.githubusercontent.com/u/38323665" alt="" />
+  <h1>Hey Visitor! I'm Gnanendar Reddy</h1>
 
   <div class="content-text">
-    <h2>Open Source Dev</h2>
+    <h2>Backend Engineer</h2>
     <p>
-      Can communicate in ASM, C, C++, JAVA, Go, Python and Javascript<br>I create Web Services and Products
+      Can communicate in JAVA, C++, Python, C, and Go<br>I create Web Services and Products
     </p>
   </div>
   <a href="#footer" class="btn btn-secondary">Connect With Me</a>
@@ -28,25 +28,25 @@
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
               <h2><i class="fab fa-cogs"></i></h2>
-              <h4>Reverse Engineering</h4>
+              <h4>System design</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
               <h2><i class="fab fa-bug"></i></h2>
-              <h4>Creating Undetectable Evil Files</h4>
+              <h4>Algorithms and Data Structures</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
               <h2><i class="fab fa-code"></i></h2>
-              <h4>Creating CLI tools</h4>
+              <h4>CLI tools</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
               <h2><i class="fab fa-server"></i></h2>
-              <h4>Virtualization</h4>
+              <h4>Networking and Security</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
@@ -73,7 +73,7 @@
   <div class="division"></div>
 
   <div class="content-text">
-    <h2>Popular Project</h2>
+    <h2>Recent Project</h2>
     <p>Check out some of my projects</p>
   </div>
 
@@ -82,22 +82,15 @@
       <table>
         <tr>
           <td>
-            <img src="https://github.com/dmdhrumilmistry/pyhtools/blob/main/.images/PyHTools.png?raw=True"
-              alt="Pyhtools image" style="width: auto; max-width: 100%;">
-          </td>
-          <td>
             <div class="container">
-              <h3>PyHtools</h3>
-              <p style="text-align: justify;">Python Hacking Tools (PyHTools) (pht) is a collection of python written
-                hacking
-                tools consisting of network
-                scanner, arp spoofer and detector, dns spoofer, code injector, packet sniffer, network jammer, email
-                sender,
-                downloader, wireless password harvester credential harvester, keylogger, download&execute, and
-                reverse_backdoor along with website login bruteforce, scraper, web spider etc. PHT also includes
-                malwares
-                which are undetectable by the antiviruses.</p>
-              <a href="https://github.com/dmdhrumilmistry/pyhtools" class="btn btn-secondary">View Project <i class="fab fa-github"></i></a>
+              <h3>Machine Coding projects</h3>
+              <p style="text-align: justify;">Machine coding projects are bunch of cool interesting command line projects built in C++ and Python 
+                programming languages. 
+                The current projects include 2048 game, splitwise, chess_validator, basic message queue.
+                Planning to add more cool projects in the future.
+                Do checkout this repository.
+                </p>
+              <a href="https://github.com/gnany07/Machine_Coding" class="btn btn-secondary">View Project <i class="fab fa-github"></i></a>
             </div>
           </td>
         </tr>
